--- a/articles/20260206-投资学习03-估值方法.md
+++ b/articles/20260206-投资学习03-估值方法.md
@@ -1,522 +1,122 @@
-# 股票投资学习笔记 03：估值方法
+# 股票投资学习笔记 03：估值方法理论与模型
 
-## 估值的核心概念
+## 估值的认识论基础
 
-### 什么是估值？
+### 内在价值与市场价格
 
-**估值**是判断一家公司股票价格是否合理的过程。
+估值（Valuation）的核心任务是推断资产的内在价值（Intrinsic Value）。根据价值投资理论，内在价值是由资产未来的现金流产生能力、风险水平和增长潜力决定的客观事实，尽管它难以精确测量。市场价格（Market Price）则是供需关系在特定时刻的反映。Benjamin Graham 提出的"市场先生"寓言形象地说明了价格围绕价值波动的现象。
 
-**本质**：估算一家公司的"内在价值"，然后与市场价格比较。
+投资决策的数学表达为：
+$$ Margin of Safety = Intrinsic Value - Market Price $$
 
-**核心等式**：
-```
-投资机会 = 内在价值 > 市场价格
-```
+当安全边际足够大时，投资才具有正的期望收益且风险可控。
 
-如果内在价值 100 元，市场价格 80 元，则是买入机会。
-如果内在价值 100 元，市场价格 150 元，则是高估，应避免。
+### 估值方法论的分类
 
-### 为什么估值很重要？
+主流估值方法可分为三类：
+1. **绝对估值法（Absolute Valuation）**：基于未来现金流折现，如 DCF 模型。
+2. **相对估值法（Relative Valuation）**：基于可比资产的市场定价，如 PE、PB 倍数法。
+3. **资产基础法（Asset-based Valuation）**：基于资产的重置成本或清算价值。
 
-1. **避免买贵了**
-   - 好公司如果太贵，也可能亏钱
-   - 再好的公司也有合理的价格区间
+## 绝对估值模型：现金流折现（DCF）
 
-2. **发现被低估的机会**
-   - 市场偶尔会犯错
-   - 优秀的公司可能被误杀
+### 理论模型
 
-3. **决定买卖时机**
-   - 估值便宜时买入
-   - 估值过高时卖出或持有不买
+现金流折现模型（Discounted Cash Flow Model）基于金融学的基本原理：资产的价值等于其未来预期现金流的现值之和。
 
-### 估值的局限性
+$$ V_0 = \sum_{t=1}^{n} \frac{CF_t}{(1+r)^t} + \frac{TV_n}{(1+r)^n} $$
 
-**估值不是科学，是艺术。**
+其中：
+- $V_0$：当前价值
+- $CF_t$：第 t 年的预期现金流
+- $r$：折现率（反映风险的必要回报率）
+- $TV_n$：第 n 年末的终值（Terminal Value）
 
-原因：
-- 未来充满不确定性
-- 不同估值方法给出不同结果
-- 市场情绪会短期影响价格
+### 自由现金流（FCF）的界定
 
-**正确态度**：
-- 估值提供"区间"而非精确数字
-- 使用多种方法交叉验证
-- 留出安全边际
+在实务中，最常用的是企业自由现金流（FCFF, Free Cash Flow to Firm）和股权自由现金流（FCFE, Free Cash Flow to Equity）。
 
-## 绝对估值法：DCF模型
+**FCFF 计算公式**：
+$$ FCFF = EBIT \times (1 - Tax Rate) + D\&A - CapEx - \Delta NWC $$
+*注：EBIT（息税前利润）、D&A（折旧与摊销）、CapEx（资本支出）、$\Delta NWC$（营运资本变动）*
 
-### DCF（Discounted Cash Flow）简介
+FCFF 反映了归属于所有资本提供者（股东和债权人）的现金流，因此对应的折现率应为加权平均资本成本（WACC）。
 
-**核心思想**：一家公司的价值等于其未来所有现金流的现值之和。
+### 折现率（WACC）的确定
 
-**原理**：今天的1元钱比明天的1元钱值钱，因为今天可以投资获得收益。
+WACC（Weighted Average Cost of Capital）代表企业整体融资成本：
 
-### DCF 基本公式
+$$ WACC = E/V \times Re + D/V \times Rd \times (1 - T) $$
 
-```
-企业价值 = Σ [未来现金流 / (1 + 折现率)^n]
-```
+其中：
+- $Re$：股权成本（通常用 CAPM 模型计算：$Re = R_f + \beta(R_m - R_f)$）
+- $Rd$：债务成本
+- $E, D, V$：分别为股权价值、债务价值和企业总价值
+- $T$：企业所得税率
 
-- **未来现金流**：预测企业未来产生的现金
-- **折现率**：将未来现金流折算为现值的利率
-- **n**：年份
+### 终值（Terminal Value）的估算
 
-### DCF 计算步骤
+终值通常占 DCF 估值结果的 60%-80%，因此至关重要。常用两种方法：
 
-#### 第一步：预测未来现金流
+1. **永续增长模型（Gordon Growth Model）**：
+   $$ TV_n = \frac{CF_n \times (1+g)}{r - g} $$
+   *注：g 为永续增长率，通常假设接近长期 GDP 增长率（2%-3%）。*
 
-通常预测未来5-10年的现金流。
+2. **退出倍数法（Exit Multiple Method）**：
+   $$ TV_n = Metric_n \times Multiple $$
+   *注：例如第 n 年的 EBITDA 乘以行业平均 EV/EBITDA 倍数。*
 
-**关键假设**：
-- 收入增长率
-- 利润率
-- 资本支出
-- 营运资金变化
+## 相对估值模型：倍数分析
 
-**注意**：预测越远，不确定性越大。
+### 理论基础：一价定律
 
-#### 第二步：确定折现率（WACC）
+相对估值法基于"一价定律"（Law of One Price），即相似的资产在市场上应该有相似的价格。
 
-**折现率 = 加权平均资本成本（WACC）**
+### 核心估值倍数及其驱动因素
 
-**WACC 组成**：
-- 债务成本（利率）
-- 股权成本（股东要求的回报率）
-- 债务和股权的权重
+1. **市盈率（P/E Ratio）**
+   - **公式**：Price / Earnings per Share
+   - **理论驱动因子**：根据高登增长模型，$P_0 = \frac{D_1}{k-g} = \frac{E_1 \times Payout Ratio}{k-g}$，因此 $P/E = \frac{Payout Ratio}{k-g}$。
+   - **含义**：PE 倍数本质上反映了增长率（g）、风险（k）和分红意愿（Payout）。高增长、低风险的公司理应享有高 PE。
 
-**简化方法**：对于一般公司，使用 8-12% 作为折现率。
+2. **市净率（P/B Ratio）**
+   - **公式**：Price / Book Value
+   - **理论驱动因子**：$P/B = \frac{ROE - g}{k - g}$。
+   - **含义**：ROE 是 PB 的核心驱动力。只有当 $ROE > k$（投入资本回报率大于资本成本）时，PB 才应大于 1，即创造了经济增加值（EVA）。
 
-#### 第三步：计算终值
+3. **EV/EBITDA**
+   - **含义**：企业价值倍数。排除了资本结构（债务杠杆）和折旧政策的影响，适用于资本密集型行业及不同税收/折旧政策下的公司比较。
 
-终值是预测期结束后的价值。
+4. **PEG（市盈率相对盈利增长比率）**
+   - **公式**：$PEG = \frac{P/E}{Growth Rate}$
+   - **应用**：用于评估成长型公司。彼得·林奇认为 PEG < 1 为低估，PEG > 2 为高估。
 
-**公式**：
-```
-终值 = 第N年现金流 × (1 + 永续增长率) / (折现率 - 永续增长率)
-```
+### 相对估值的陷阱
 
-**永续增长率**：通常假设为 2-3%（接近长期GDP增长）。
+- **可比性陷阱**：没有两家公司是完全相同的，业务组合、增长阶段、风险水平的差异可能导致倍数失效。
+- **市场情绪偏差**：如果整个行业被高估，相对估值法会得出"相对便宜但依然昂贵"的误导性结论。
 
-#### 第四步：折现求和
+## 估值建模的实务考量
 
-将每年的现金流和终值折算为现值，求和得到企业价值。
+### 敏感性分析（Sensitivity Analysis）
 
-#### 第五步：计算每股价值
+由于 DCF 模型对假设极为敏感，实务中必须进行敏感性分析。构建矩阵，观察当折现率（WACC）和永续增长率（g）发生微小变化时，估值结果的波动范围。这能帮助投资者理解估值的置信区间。
 
-```
-每股价值 = (企业价值 - 净债务) / 总股本
-```
+### 均值回归（Mean Reversion）
 
-### DCF 的优缺点
+在预测长期增长率和利润率时，应遵循均值回归原则。超额利润通常会引来竞争，导致利润率向行业平均水平收敛。假设企业能永远保持超高增长和超高利润率是估值中常见的错误。
 
-**优点**：
-- 理论基础扎实
-- 考虑了时间价值
-- 关注现金流（比利润更真实）
+## 结论：估值的科学与艺术
 
-**缺点**：
-- 需要大量假设
-- 对假设非常敏感
-- 预测未来本身就很困难
+估值既是科学也是艺术。科学在于它有严谨的数学逻辑和财务模型；艺术在于参数的选择（如未来的增长率、风险系数）依赖于投资者的主观判断和对商业本质的洞察。
 
-**关键敏感性**：
-- 折现率变化1%，估值可能变化10-20%
-- 增长率变化1%，估值可能变化更大
-
-### DCF 实务建议
-
-1. **不要依赖单一数值**
-   - 计算一个区间（乐观、中性、悲观）
-   - 看三个情景的结果
-
-2. **交叉验证**
-   - 与其他估值方法对比
-   - 与同行业公司对比
-
-3. **关注关键假设**
-   - 哪些假设最关键？
-   - 这些假设合理吗？
-
-4. **更新估值**
-   - 定期根据新信息调整
-   - 跟踪预测 vs 实际
-
-## 相对估值法
-
-### PE（市盈率）
-
-#### 基本概念
-
-**定义**：每股价格 / 每股收益
-
-**含义**：投资回本需要多少年
-
-**示例**：
-- PE = 20：按当前盈利，20年回本
-- PE = 10：10年回本
-
-#### 计算方法
-
-**静态PE**：
-```
-PE = 当前股价 / 去年每股收益
-```
-
-**动态PE（Forward PE）**：
-```
-PE = 当前股价 / 预期明年每股收益
-```
-
-#### PE 评价标准
-
-| PE范围 | 评价 |
-|--------|------|
-| < 10 | 极低（价值陷阱或周期底部） |
-| 10-15 | 低估 |
-| 15-25 | 合理 |
-| 25-40 | 偏高（除非高成长） |
-| > 40 | 高估（除非高成长） |
-
-#### PE 的局限性
-
-1. **不适用于亏损公司**
-   - 没有收益，无法计算PE
-
-2. **不适用于周期性行业**
-   - 周期顶部时PE很低（收益极高）
-   - 周期底部时PE很高（收益极低）
-
-3. **不适用于高成长公司**
-   - 高成长公司PE很高是正常的
-   - 需要看PEG（市盈增长比率）
-
-4. **容易被操纵**
-   - 通过会计方法调节收益
-
-#### PEG（市盈增长比率）
-
-**公式**：
-```
-PEG = PE / 预期未来几年增长率
-```
-
-**评价标准**：
-- PEG < 1：低估
-- PEG = 1：合理
-- PEG > 1：高估
-
-**示例**：
-- PE = 30，增长率30%：PEG = 1，合理
-- PE = 30，增长率10%：PEG = 3，高估
-
-### PB（市净率）
-
-#### 基本概念
-
-**定义**：每股价格 / 每股净资产
-
-**含义**：你花了多少钱买公司的净资产
-
-**示例**：
-- PB = 2：花2元买1元净资产
-- PB = 0.8：花0.8元买1元净资产（低估）
-
-#### PB 评价标准
-
-| PB范围 | 评价 |
-|--------|------|
-| < 1 | 低估（资产清算价值） |
-| 1-2 | 合理 |
-| 2-4 | 偏高（除非高ROE） |
-| > 4 | 高估 |
-
-#### PB 适用场景
-
-1. **金融行业**
-   - 银行、保险公司
-   - 资产是关键
-
-2. **周期性行业**
-   - 钢铁、航运等
-   - 盈利波动大，资产相对稳定
-
-3. **重资产行业**
-   - 制造业、公用事业
-
-#### PB 的局限性
-
-1. **不适用于轻资产公司**
-   - 科技、服务行业
-   - 主要价值是无形资产（品牌、技术）
-
-2. **忽略盈利能力**
-   - 高PB的公司可能有高ROE
-   - 低PB的公司可能是价值陷阱
-
-3. **账面价值可能失真**
-   - 会计估值可能与市场价值不同
-   - 无形资产可能被低估
-
-### PS（市销率）
-
-#### 基本概念
-
-**定义**：每股价格 / 每股销售额
-
-**含义**：每1元销售收入对应多少市值
-
-**示例**：
-- PS = 5：市值是销售额的5倍
-- PS = 1：市值等于销售额
-
-#### PS 评价标准
-
-| PS范围 | 评价 |
-|--------|------|
-| < 2 | 低估 |
-| 2-5 | 合理 |
-| 5-10 | 偏高 |
-| > 10 | 高估 |
-
-#### PS 适用场景
-
-1. **亏损公司**
-   - 没有利润，无法用PE
-   - 可以用PS看市场认可度
-
-2. **高成长公司**
-   - 初期亏损，但收入增长快
-   - 电商、互联网公司
-
-3. **同行业对比**
-   - 排除利润率差异
-   - 纯看销售规模
-
-#### PS 的局限性
-
-1. **忽略利润率**
-   - 高PS可能只是利润率低
-   - 没有考虑成本结构
-
-2. **需要结合利润率看**
-   - PS = 5，利润率20%：合理
-   - PS = 5，利润率2%：可能高估
-
-### 其他相对估值指标
-
-#### EV/EBITDA
-
-**定义**：企业价值 / 息税折旧摊销前利润
-
-**优点**：
-- 排除债务和资本结构影响
-- 适用于不同资本结构的公司对比
-
-**适用**：资本密集型行业（电信、公用事业）
-
-#### PEG（再次强调）
-
-**重要**：对于成长股，PEG比PE更有意义。
-
-**注意**：增长率预测要谨慎，不要过度乐观。
-
-## 估值的艺术与局限
-
-### 不同估值方法给出不同结果怎么办？
-
-**方法**：
-1. 计算多个估值方法的范围
-2. 给不同方法赋予权重
-3. 取加权平均值或区间
-
-**示例**：
-- DCF：100-120 元
-- PE：90-110 元
-- PB：85-105 元
-- **综合区间：85-120 元**
-
-### 估值不是"精确科学"
-
-**正确态度**：
-- 估值提供"参考区间"
-- 不要追求精确到分
-- 留出安全边际
-
-**巴菲特名言**："宁要模糊的正确，不要精确的错误。"
-
-### 常见估值错误
-
-1. **过度乐观**
-   - 预测增长率过高
-   - 低估风险和不确定性
-
-2. **忽略行业特性**
-   - 用科技股方法估值周期股
-   - 用成长股方法估值价值股
-
-3. **静态思维**
-   - 假设未来会像过去一样
-   - 不考虑行业变化和竞争
-
-4. **过度依赖单一方法**
-   - 只看PE，忽略现金流
-   - 只看PB，忽略ROE
-
-## 不同行业的估值特点
-
-### 消费品行业
-
-**特点**：品牌护城河，稳定增长
-
-**估值方法**：
-- PE（15-25合理）
-- PEG（关注增长可持续性）
-
-**关注点**：
-- 品牌力
-- 市场份额
-- 产品创新
-
-### 科技行业
-
-**特点**：高成长，高不确定性
-
-**估值方法**：
-- PEG（关键）
-- PS（初期亏损时）
-- DCF（高风险，谨慎使用）
-
-**关注点**：
-- 技术优势
-- 用户增长
-- 市场规模
-
-### 金融行业
-
-**特点**：高杠杆，周期性
-
-**估值方法**：
-- PB（核心指标）
-- PE（需要区分周期位置）
-
-**关注点**：
-- 资产质量
-- 不良贷款率
-- 监管风险
-
-### 周期性行业
-
-**特点**：业绩波动大
-
-**估值方法**：
-- PB（核心指标）
-- 周期底部看PE可能很高（收益低）
-
-**关注点**：
-- 周期位置（底部/顶部）
-- 产能利用率
-- 行业供需
-
-### 公用事业
-
-**特点**：稳定，受监管
-
-**估值方法**：
-- PE（稳定，可预测）
-- 股息率（重要）
-
-**关注点**：
-- 监管政策
-- 资本开支
-- 负债水平
-
-## A股估值特点
-
-### A股特有现象
-
-1. **散户占比高**
-   - 投机氛围浓
-   - 情绪波动大
-   - 容易出现极端估值
-
-2. **政策影响大**
-   - 政策驱动的行业
-   - 估值提升或压缩快
-
-3. **优质公司估值合理**
-   - 茅台、腾讯等龙头
-   - 相比美股并不特别贵
-
-4. **小盘股估值偏高**
-   - 流动性溢价
-   - 壳资源价值（注册制后减弱）
-
-### A股估值建议
-
-1. **关注优质龙头**
-   - 估值合理，成长稳健
-   - 避免小盘股的估值陷阱
-
-2. **考虑中国特色**
-   - 政策驱动行业（新能源、半导体）
-   - 可能享有估值溢价
-
-3. **警惕概念炒作**
-   - 热点题材估值极高
-   - 回归基本面
-
-4. **长期视角**
-   - A股波动大
-   - 长期持有优质公司能获得好回报
-
-## 估值实务流程
-
-### 第一步：筛选公司
-
-- 基本面优秀
-- 行业前景好
-- 财务健康
-
-### 第二步：初步估值
-
-- 用PE、PB快速判断
-- 是否在合理区间
-
-### 第三步：深入分析
-
-- 研究商业模式
-- 分析竞争优势
-- 评估增长潜力
-
-### 第四步：精细估值
-
-- DCF模型
-- 多种方法对比
-- 估算内在价值区间
-
-### 第五步：决策
-
-- 当前价格 vs 内在价值
-- 安全边际是否足够
-- 是否值得买入
-
-## 本节要点总结
-
-1. **估值核心**：估算内在价值，与市场价格比较
-2. **绝对估值**：DCF模型基于未来现金流，但需要大量假设
-3. **相对估值**：PE、PB、PS等方法，各有适用场景和局限
-4. **估值艺术**：不同方法给出不同结果，取综合区间
-5. **行业差异**：不同行业有不同估值特点和方法偏好
-
-## 思考题
-
-1. 一家公司PE=50，PB=10，你觉得如何判断？
-2. DCF模型的关键假设有哪些？哪个最敏感？
-3. 为什么说估值是"艺术"而非"科学"？
-4. A股公司估值有哪些特点？
-5. 如何综合使用多种估值方法？
+**核心原则**：
+1. **模糊的正确胜过精确的错误**。
+2. **估值是区间而非点值**。
+3. **始终保留安全边际**。
 
 ---
 
-下一篇：风险管理
+*参考资料：Damodaran on Valuation, McKinsey Valuation: Measuring and Managing the Value of Companies*
+
+上一篇：财务报表分析 | 下一篇：风险管理
