--- a/articles/20260206-投资学习04-风险管理.md
+++ b/articles/20260206-投资学习04-风险管理.md
@@ -1,733 +1,246 @@
-# 股票投资学习笔记 04：风险管理
+# 股票投资学习笔记 04：风险管理与投资组合理论
 
-## 风险的本质
+## 风险的数学定义与分类
 
-### 什么是投资风险？
+### 现代投资组合理论（MPT）中的风险定义
 
-**传统理解**：价格波动越大，风险越大
+根据 Harry Markowitz 的现代投资组合理论，投资风险被定义为资产收益的波动性，通过收益率的方差（Variance）或标准差（Standard Deviation）来量化：
 
-**价值投资理解**：风险是**本金永久损失的可能性**
+$$ \sigma^2 = E[(R - E[R])^2] $$
+$$ \sigma = \sqrt{\sigma^2} $$
 
-- 价格波动是暂时的
-- 本金损失是永久的
-- 价值投资者关注后者，不惧前者
+其中：
+- $R$：资产收益率
+- $E[R]$：期望收益率
+- $\sigma^2$：方差
+- $\sigma$：标准差
 
-### 风险的来源
+这种基于波动性的风险定义假设投资者是风险厌恶的，即在其他条件相同的情况下，偏好较低的波动。
 
-#### 1. 系统性风险（市场风险）
+### 风险的二分法：系统性与非系统性风险
 
-**定义**：整个市场下跌的风险
+根据资本资产定价模型（CAPM），总风险（$\sigma_{total}$）可分解为：
 
-**特征**：
-- 无法通过分散投资避免
-- 受宏观经济、政策、战争等影响
-- 所有股票都可能同时下跌
+$$ \sigma_{total}^2 = \sigma_{systematic}^2 + \sigma_{unsystematic}^2 $$
 
-**示例**：
+**系统性风险（Systematic Risk）**：
+- 也称为市场风险或不可分散风险
+- 源于宏观经济因素（利率、通货膨胀、经济周期、政治事件等）
+- 影响整个市场或绝大多数资产
+- 无法通过分散化消除
+- 用 Beta（$\beta$）衡量：$\beta = \frac{Cov(R_i, R_m)}{Var(R_m)}$
+
+**非系统性风险（Unsystematic Risk）**：
+- 也称为特质风险或可分散风险
+- 源于特定公司或行业的因素
+- 影响单个或少数资产
+- 可以通过充分分散化消除
+
+### 有效前沿（Efficient Frontier）
+
+投资组合理论的核心结论是：在风险-收益空间中，存在一个有效前沿，该前沿上的投资组合在给定的风险水平下提供最高的期望收益，或在给定的收益水平下承担最小的风险。
+
+数学上，对于包含 N 个资产的投资组合，其期望收益和方差为：
+
+$$ E[R_p] = \sum_{i=1}^{N} w_i E[R_i] $$
+$$ \sigma_p^2 = \sum_{i=1}^{N} \sum_{j=1}^{N} w_i w_j \sigma_{ij} = \sum_{i=1}^{N} w_i^2 \sigma_i^2 + \sum_{i \neq j} w_i w_j \rho_{ij} \sigma_i \sigma_j $$
+
+其中：
+- $w_i$：资产 i 的权重
+- $\sigma_{ij}$：资产 i 和 j 的协方差
+- $\rho_{ij}$：相关系数
+
+有效前沿可通过优化问题求解：
+$$ \min \sigma_p^2 \quad \text{s.t.} \quad E[R_p] \geq R_{target} $$
+或
+$$ \max E[R_p] \quad \text{s.t.} \quad \sigma_p^2 \leq \sigma_{target}^2 $$
+
+### 分散化的数学证明
+
+分散化的有效性可以通过方差公式直观地理解。假设等权重投资组合，资产收益互不独立且具有相同的相关系数 $\rho$，则：
+
+$$ \sigma_p^2 = \frac{\bar{\sigma}^2}{N} + \frac{N-1}{N} \rho \bar{\sigma}^2 $$
+
+当 $N \to \infty$ 时：
+$$ \lim_{N \to \infty} \sigma_p^2 = \rho \bar{\sigma}^2 $$
+
+**结论**：
+- 随着资产数量增加，组合风险降低
+- 极限风险取决于资产间的相关系数 $\rho$
+- 若 $\rho = 1$（完全正相关），分散化无效
+- 若 $\rho = 0$（不相关），非系统性风险可完全消除
+- 若 $\rho < 0$（负相关），分散化效果最佳
+
+### CAPM 与风险定价
+
+根据 CAPM，资产的期望收益仅与其承担的系统性风险（Beta）相关：
+
+$$ E[R_i] = R_f + \beta_i (E[R_m] - R_f) $$
+
+其中：
+- $R_f$：无风险利率
+- $E[R_m]$：市场组合期望收益
+- $E[R_m] - R_f$：市场风险溢价（Market Risk Premium）
+
+**推论**：在均衡市场中，投资者不会为承担非系统性风险获得补偿，因为这种风险可以通过分散化免费消除。只有系统性风险需要补偿。
+
+## 仓位管理理论
+
+### 凯利公式（Kelly Criterion）
+
+凯利公式来源于信息论，用于确定在期望收益为正的博弈中每次应投入的最优资金比例：
+
+$$ f^* = \frac{p}{b} - \frac{q}{b} = \frac{bp - q}{b} = \frac{p(b+1) - 1}{b} $$
+
+其中：
+- $f^*$：最优下注比例
+- $p$：获胜概率
+- $q = 1-p$：失败概率
+- $b$：赔率（净赔率，如2:1赔率则 $b=2$）
+
+在连续投资场景下，凯利公式为：
+$$ f^* = \frac{\mu - r_f}{\sigma^2} $$
+
+其中 $\mu$ 为期望收益。
+
+**实际应用**：
+- 股票投资中的 $p$ 和 $b$ 难以精确估计
+- 全仓凯利可能导致巨大波动
+- 实务中常用**半凯利（Half-Kelly）**以降低波动
+
+### 风险平价（Risk Parity）
+
+风险平价策略的核心思想是：根据资产对组合风险的贡献，而非市值，分配资金。
+
+对于资产 i 的风险贡献（Marginal Risk Contribution）：
+$$ MRC_i = w_i \times \frac{\partial \sigma_p}{\partial w_i} $$
+
+风险平价要求：
+$$ MRC_1 = MRC_2 = \dots = MRC_N $$
+
+这导致波动率高的资产权重较低，波动率低的资产权重较高。
+
+**示例**：60/40 股债组合
+- 传统配置：60% 股票，40% 债券
+- 但股票波动约为债券的3倍，因此风险贡献比例约为 82% / 18%
+- 风险平价配置可能为：18% 股票，82% 债券（使风险贡献各50%）
+
+## 止损机制与下行风险保护
+
+### 下行风险的替代度量
+
+传统方差（或标准差）对称地衡量上行和下行波动，但投资者通常更关注下行风险。常用的替代指标包括：
+
+**1. 半方差（Semi-variance）**：
+$$ \sigma_{-}^2 = E[(min(R - E[R], 0))^2] $$
+只计算低于均值的收益波动。
+
+**2. 下行风险（Downside Risk, DR）**：
+$$ DR = \sqrt{\frac{1}{T} \sum_{t=1}^{T} min(R_t - R_{target}, 0)^2} $$
+其中 $R_{target}$ 可设为无风险利率或目标收益。
+
+**3. 最大回撤（Maximum Drawdown, MDD）**：
+$$ MDD = \max_{t_1 < t_2} \left( \frac{P_{t_2} - P_{t_1}}{P_{t_1}} \right) $$
+衡量从峰值到谷底的最大跌幅。
+
+**4. VaR（Value at Risk）与 CVaR**：
+- VaR($\alpha$)：在置信水平 $1-\alpha$ 下，投资组合的最大可能损失
+- CVaR（Conditional VaR）：超过 VaR 时的平均损失，比 VaR 更稳健
+
+### 止损机制的数学原理
+
+止损本质上是一个期权（卖出权）的执行。考虑一个简单的百分比止损策略：
+
+设止损比例为 $L$，若价格下跌 $L\%$ 则卖出。这相当于为投资组合购买了一个执行价格为 $(1-L) P_0$ 的美式看跌期权，支付的成本为预期损失。
+
+设资产价格服从几何布朗运动，则触发止损的概率为：
+$$ P(\text{Stop Loss}) = P(\min_{0 \leq t \leq T} \frac{P_t}{P_0} \leq 1-L) $$
+
+在实务中，止损的有效性取决于：
+1. **流动性**：若市场流动性枯竭，止损无法及时执行
+2. **跳空风险**：开盘跳空可能直接跌破止损线
+3. **波动性**：高波动环境下止损易被"噪音"触发
+
+### 动态止损（Trailing Stop）
+
+动态止损止损线随价格上涨而提升，锁定利润的同时保留上涨空间：
+
+$$ Stop_t = \max(P_t \times (1-L), Stop_{t-1}) $$
+
+## 行为金融视角下的风险管理
+
+### 行为偏差
+
+**1. 过度自信（Overconfidence）**：
+- 投资者高估自己的信息和能力
+- 表现为交易过度、分散化不足、仓位过高
+- 对策：强制分散化、记录和评估决策、承认局限性
+
+**2. 损失厌恶（Loss Aversion）**：
+- 根据前景理论（Prospect Theory），损失的痛苦是等额收益快乐的约2-2.5倍
+- 表现为：不愿止损、抱有幻想、过度持有亏损股
+- 对策：设定客观止损规则、委托他人执行、关注长期目标
+
+**3. 确认偏差（Confirmation Bias）**：
+- 倾向于寻找和记住支持自己观点的证据
+- 忽略反面信息
+- 对策：主动寻找反面观点、定期假设自己观点错误
+
+**4. 锚定效应（Anchoring）**：
+- 过度依赖初始信息（如买入价）
+- 下跌中无法客观评估当前价值
+- 对策：关注基本面变化、重新估值、忘记买入价
+
+### 情绪周期的数学模型
+
+投资者的情绪周期常被建模为：
+$$ E_t = \alpha E_{t-1} + \beta R_t + \epsilon_t $$
+
+其中 $E_t$ 为情绪水平，$\alpha$ 为情绪持续系数，$\beta$ 为收益对情绪的影响系数。
+
+在市场极端情绪下（极度贪婪或恐惧），逆向策略往往有效：
+$$ \text{Contrarian Signal} = - \text{Normalized Sentiment}_t $$
+
+## 风险预算与压力测试
+
+### 风险预算（Risk Budgeting）
+
+风险预算将总风险分配到不同的因子或资产上：
+
+$$ Total Risk = \sum_{i=1}^{N} RB_i $$
+
+其中 $RB_i$ 为分配给因子 i 的风险预算。
+
+常见分配方式：
+- 按因子风险暴露分配
+- 按行业分配
+- 按地域分配
+
+**约束**：
+$$ \sum_{i=1}^{N} w_i = 1 $$
+$$ \sigma_p^2 \leq \sigma_{target}^2 $$
+
+### 压力测试（Stress Testing）
+
+压力测试模拟极端市场场景下的投资组合表现：
+
+**历史场景**：
 - 2008年金融危机
-- 2015年A股暴跌
 - 2020年疫情冲击
-
-**应对**：
-- 长期持有（市场终究会恢复）
-- 分批买入（不要一次性all in）
-- 保持适当现金（等待机会）
-
-#### 2. 非系统性风险（个股风险）
-
-**定义**：单个公司的风险
-
-**特征**：
-- 可以通过分散投资降低
-- 与公司自身情况相关
-- 只影响特定股票
-
-**示例**：
-- 公司业绩暴雷
-- 财务造假
-- 行业监管政策
-
-**应对**：
-- 分散投资（不要把鸡蛋放在一个篮子里）
-- 深入研究（避免问题公司）
-- 定期跟踪（及时发现问题）
-
-#### 3. 流动性风险
-
-**定义**：无法及时卖出的风险
-
-**特征**：
-- 小盘股流动性差
-- 大跌时成交量萎缩
-- 可能无法在合理价格卖出
-
-**应对**：
-- 避免流动性太差的股票
-- 不要all in单一股票
-- 关注成交量和换手率
-
-#### 4. 估值风险
-
-**定义**：买入价格过高的风险
-
-**特征**：
-- 好公司买贵了
-- 即使公司很好，也可能亏钱
-- 需要很长时间"消化"高估值
-
-**应对**：
-- 等待合理估值
-- 留出安全边际
-- 不要追逐热点
-
-## 投资组合分散化
-
-### 为什么需要分散化？
-
-**核心原理**：不把鸡蛋放在一个篮子里。
-
-**好处**：
-1. **降低个股风险**
-   - 单一公司暴雷，损失有限
-
-2. **平滑收益波动**
-   - 不同股票表现不同
-   - 组合整体更稳定
-
-3. **避免"黑天鹅"**
-   - 任何单一股票都可能出问题
-   - 分散化避免归零风险
-
-### 分散化的正确方式
-
-#### 1. 数量分散
-
-**建议**：
-- 散户：5-10只股票
-- 资金量小：3-5只股票
-- 不要超过20只（无法深入研究）
-
-**原则**：
-- 质量大于数量
-- 能深入研究的数量即可
-- 不要为了分散而分散
-
-#### 2. 行业分散
-
-**避免**：
-- 所有股票在同一个行业
-- 行业波动大，组合风险高
-
-**建议**：
-- 覆盖3-5个不同行业
-- 行业间相关性低
-- 避免过度集中
-
-**示例**：
-- 消费 + 医药 + 科技 + 金融 + 制造
-- 而不是：消费（白酒、家电、乳制品）
-
-#### 3. 风格分散
-
-**不同风格**：
-- 成长股 vs 价值股
-- 大盘股 vs 小盘股
-- 周期股 vs 稳健股
-
-**好处**：
-- 不同时期表现不同
-- 平衡组合风险收益
-
-#### 4. 地域分散（如果有能力）
-
-**建议**：
-- A股 + 港股 + 美股
-- 不同市场表现不同
-- 降低单一市场风险
-
-**注意**：
-- 需要足够资金
-- 需要了解当地市场
-- 汇率风险
-
-### 分散化的错误方式
-
-❌ **过度分散**
-- 持有几十只股票
-- 无法深入研究
-- 接近市场平均收益
-
-❌ **形式分散**
-- 10只股票都是白酒
-- 10只股票都是新能源
-- 看似分散，实则集中
-
-❌ **只看名字分散**
-- 不同公司，同一业务
-- 不同公司，同一大股东
-- 风险仍然集中
-
-✅ **正确分散**
-- 5-10只深入研究的好公司
-- 覆盖不同行业
-- 不同风格和市值
-
-## 仓位管理策略
-
-### 什么是仓位管理？
-
-**定义**：决定每只股票投入多少资金。
-
-**核心原则**：
-- 不要all in单一股票
-- 根据确定性分配资金
-- 为错误留出空间
-
-### 常见仓位管理方法
-
-#### 1. 等额分配
-
-**方法**：每只股票投入相同金额。
-
-**示例**：
-- 总资金10万
-- 持有5只股票
-- 每只2万
-
-**优点**：简单易行
-**缺点**：不考虑确定性差异
-
-#### 2. 基于确定性的分配
-
-**方法**：确定性越高，仓位越大。
-
-**判断确定性**：
-- 公司质量（龙头 vs 小公司）
-- 行业前景（朝阳 vs 夕阳）
-- 研究深度（了解 vs 不了解）
-
-**示例**：
-- 高确定性股票：30%仓位
-- 中确定性股票：20%仓位
-- 低确定性股票：10%仓位
-
-#### 3. 金字塔式加仓
-
-**方法**：
-- 底仓：20-30%
-- 上涨中加仓：每次10-15%
-- 下跌中加仓：如果基本面没变
-
-**优点**：
-- 控制风险
-- 兑现收益时加仓
-
-**注意**：
-- 不要下跌不止损加仓
-- 基本面变坏及时止损
-
-#### 4. 分批建仓
-
-**方法**：
-- 不一次性all in
-- 分2-3次买入
-- 间隔几天或几周
-
-**优点**：
-- 平摊成本
-- 观察市场反应
-
-**示例**：
-- 第一次买入：50%
-- 观察1周
-- 第二次买入：50%
-
-### 仓位管理原则
-
-#### 原则1：单只股票不超过30%
-
-**原因**：
-- 防止单一股票归零风险
-- 即使暴雷，损失有限
-
-#### 原则2：前三大重仓不超过60%
-
-**原因**：
-- 避免过度集中
-- 分散化仍有意义
-
-#### 原则3：确定性决定仓位
-
-**高确定性**：
-- 行业龙头
-- 财务健康
-- 持续成长
-- **仓位：20-30%**
-
-**中确定性**：
-- 行业地位不错
-- 财务良好
-- 成长性有疑问
-- **仓位：10-20%**
-
-**低确定性**：
-- 小公司
-- 业绩波动
-- 争议较大
-- **仓位：5-10%**
-
-#### 原则4：保留现金
-
-**保留比例**：
-- 正常市场：10-20%现金
-- 高估市场：30-50%现金
-- 低估市场：现金可以少些
-
-**现金的作用**：
-- 应对机会
-- 降低风险
-- 保持心态
-
-## 止损与止盈
-
-### 止损：保护本金
-
-#### 为什么要止损？
-
-**数学原理**：
-- 亏损50%需要上涨100%才能回本
-- 亏损80%需要上涨400%才能回本
-
-**心理影响**：
-- 大幅亏损影响心态
-- 容易做出错误决策
-
-#### 止损方法
-
-**1. 基于基本面的止损**
-
-**触发条件**：
-- 公司基本面恶化
-- 行业逻辑被证伪
-- 发现财务造假
-
-**示例**：
-- 业绩连续下滑
-- 失去市场份额
-- 监管政策不利
-
-**优点**：
-- 符合价值投资理念
-- 避免越跌越买
-
-**缺点**：
-- 判断可能出错
-- 可能卖在底部
-
-**2. 基于技术面的止损**
-
-**常见方法**：
-- 跌破关键支撑位
-- 移动止损（trailing stop）
-- 固定百分比（如-10%）
-
-**适用**：
-- 短线交易
-- 技术分析为主
-
-**注意**：
-- 价值投资者不推荐
-- 容易被震仓洗出
-
-**3. 基于仓位的止损**
-
-**方法**：
-- 亏损达到一定比例，减仓
-- 不是清仓，而是降低风险
-
-**示例**：
-- 亏损15%，减半仓
-- 继续下跌，继续减仓
-
-**优点**：
-- 平衡风险和机会
-- 不容易一次性卖光
-
-#### 止损常见错误
-
-❌ **不止损**
-- 抱有幻想
-- 越跌越买
-- 小亏变大亏
-
-❌ **止损过急**
-- 随意设置止损线
-- 被短期波动洗出
-- 卖在相对低点
-
-❌ **止损后不反思**
-- 重复同样错误
-- 不总结经验教训
-
-✅ **正确止损**
-- 有明确止损理由
-- 执行后分析原因
-- 总结经验改进
-
-### 止盈：兑现收益
-
-#### 为什么要止盈？
-
-1. **市场周期**
-   - 高估值时卖出
-   - 等待下一个周期
-
-2. **基本面变化**
-   - 公司逻辑不再成立
-   - 找到更好的机会
-
-3. **再平衡**
-   - 某只股票涨太多
-   - 仓位过大风险高
-
-#### 止盈方法
-
-**1. 分批止盈**
-
-**方法**：
-- 涨到目标价位，卖出一部分
-- 继续上涨，继续卖出
-- 保留一部分继续持有
-
-**示例**：
-- 目标100元：
-  - 100元卖出30%
-  - 120元卖出30%
-  - 140元卖出40%
-
-**优点**：
-- 兑现部分收益
-- 继续享受上涨
-
-**2. 基于估值的止盈**
-
-**触发条件**：
-- 估值明显高估
-- 远超内在价值
-- 市场情绪过热
-
-**判断标准**：
-- PE远超历史区间
-- PB历史高位
-- 市场热议该股票
-
-**3. 基于基本面的止盈**
-
-**触发条件**：
-- 行业增长放缓
-- 公司市场份额下降
-- 新竞争者出现
-
-#### 止盈常见错误
-
-❌ **过早止盈**
-- 涨了一点就卖
-- 错过大行情
-- 嫉妒心理作祟
-
-❌ **不止盈**
-- 涨了不想卖
-- 变成"长线被套"
-- 坐过山车
-
-❌ **止盈后不再买入**
-- 卖出后股价继续涨
-- 后悔卖出，不敢再买
-- 错失更大机会
-
-✅ **正确止盈**
-- 有明确止盈标准
-- 分批兑现收益
-- 保留仓位继续持有
-
-## 黑天鹅事件的应对
-
-### 什么是黑天鹅？
-
-**定义**：极不可能发生，但一旦发生影响巨大。
-
-**特征**：
-- 事前无法预测
-- 发生后影响深远
-- 改变原有逻辑
-
-**示例**：
-- 2008年金融危机
-- 2020年新冠疫情
-- 俄乌战争
-
-### 黑天鹅的分类
-
-#### 1. 全球性黑天鹅
-
-**影响**：
-- 全球市场暴跌
-- 几乎无幸免
-
-**应对**：
-- 长期持有（市场会恢复）
-- 不要恐慌性抛售
-- 可以考虑逢低加仓
-
-#### 2. 行业性黑天鹅
-
-**影响**：
-- 特定行业受重创
-- 其他行业相对安全
-
-**示例**：
-- 三聚氰胺事件（乳业）
-- 疫苗事件（疫苗行业）
-
-**应对**：
-- 分析行业是否恢复
-- 优质公司可能反弹
-- 避开该行业
-
-#### 3. 个股黑天鹅
-
-**影响**：
-- 单一公司受重创
-- 其他公司无影响
-
-**示例**：
-- 财务造假
-- 产品安全事故
-- 高管被捕
-
-**应对**：
-- 及时止损
-- 不要抱有幻想
-- 深刻反思错误
-
-### 黑天鹅应对原则
-
-#### 原则1：保持现金
-
-**现金的作用**：
-- 应对黑天鹅
-- 等待机会
-- 保持心态
-
-**建议**：
-- 正常时期：10-20%现金
-- 高估时期：30-50%现金
-
-#### 原则2：不要all in
-
-**为什么**：
-- 黑天鹅无法预测
-- all in可能归零
-- 保持一定安全空间
-
-**建议**：
-- 单一股票不超过30%
-- 组合分散化
-- 避免杠杆
-
-#### 原则3：长期视角
-
-**为什么**：
-- 市场长期向上
-- 黑天鹅影响有限
-- 优质公司会恢复
-
-**数据**：
-- 美股每10年左右一次大熊市
-- 熊市后都创新高
-- 长期持有胜率高
-
-## 情绪控制与纪律
-
-### 投资中的情绪
-
-#### 1. 贪婪
-
-**表现**：
-- 涨了舍不得卖
-- 想赚更多
-- 追逐热点
-
-**后果**：
-- 变成坐过山车
-- 错过最佳卖点
-- 高位接盘
-
-**应对**：
-- 设定止盈目标
-- 分批兑现收益
-- 克制追涨欲望
-
-#### 2. 恐惧
-
-**表现**：
-- 跌了不敢买
-- 跌了恐慌性卖
-- 低位割肉
-
-**后果**：
-- 错过底部机会
-- 低位卖掉好股票
-- 亏损兑现
-
-**应对**：
-- 关注公司基本面
-- 长期视角
-- 逆向思维
-
-#### 3. 后悔
-
-**表现**：
-- 卖早了后悔
-- 买晚了后悔
-- 错过热点后悔
-
-**后果**：
-- 影响心态
-- 做出错误决策
-- 信心受打击
-
-**应对**：
-- 接受不完美
-- 关注未来机会
-- 不断学习和改进
-
-### 建立投资纪律
-
-#### 纪律1：买入有标准
-
-**标准应该包括**：
-- 估值区间（PE、PB等）
-- 公司质量要求（ROE、现金流等）
-- 行业前景判断
-- 仓位大小
-
-**执行**：
-- 不符合标准不买
-- 不冲动下单
-- 仔细研究后再决策
-
-#### 纪律2：卖出有标准
-
-**标准应该包括**：
-- 止损条件（基本面或技术面）
-- 止盈条件（估值或基本面）
-- 再平衡条件（仓位过大）
-
-**执行**：
-- 到达标准执行
-- 不犹豫不决
-- 执行后反思
-
-#### 纪律3：记录和复盘
-
-**记录内容**：
-- 买入理由
-- 卖出理由
-- 盈亏情况
-- 心理状态
-
-**复盘频率**：
-- 每周回顾
-- 每月总结
-- 每年总结
-
-**改进方向**：
-- 哪些决策正确
-- 哪些决策错误
-- 如何改进
-
-### 常见情绪陷阱
-
-#### 陷阱1：确认偏差
-
-**表现**：
-- 只看到支持自己观点的信息
-- 忽略反对意见
-- 过度自信
-
-**应对**：
-- 主动寻找反对观点
-- 与不同观点的人讨论
-- 承认自己的无知
-
-#### 陷阱2：锚定效应
-
-**表现**：
-- 过于依赖买入价格
-- 下跌中舍不得卖
-- 不愿承认错误
-
-**应对**：
-- 关注当前价值
-- 不被买入价束缚
-- 及时纠错
-
-#### 陷阱3：羊群效应
-
-**表现**：
-- 追随市场热点
-- 大家买我也买
-- 不愿与众不同
-
-**应对**：
-- 独立思考
-- 不随大流
-- 勇于逆向
-
-## 风险管理清单
-
-### 买入前检查
-
-- [ ] 公司基本面优秀
-- [ ] 行业前景良好
-- [ ] 估值合理
-- [ ] 单只仓位不超过30%
-- [ ] 组合已经分散化
-- [ ] 有明确的止损条件
-
-### 持有中检查
-
-- [ ] 定期跟踪公司公告
-- [ ] 关注行业动态
-- [ ] 评估估值变化
-- [ ] 检查基本面是否恶化
-- [ ] 考虑是否需要再平衡
-
-### 卖出前检查
-
-- [ ] 卖出理由明确
-- [ ] 是止损还是止盈
-- [ ] 是否分批卖出
-- [ ] 卖出后资金去向
-- [ ] 不会错过更好机会
-
-## 本节要点总结
-
-1. **风险本质**：本金永久损失才是真正的风险，价格波动不是
-2. **分散化**：通过数量、行业、风格、地域分散降低个股风险
-3. **仓位管理**：根据确定性分配资金，单只不超过30%，保留现金
-4. **止损止盈**：有明确标准，分批操作，执行后反思
-5. **情绪控制**：克服贪婪恐惧，建立纪律，记录复盘
-
-## 思考题
-
-1. 你目前的投资组合分散化程度如何？
-2. 你有明确的止损标准吗？执行得如何？
-3. 你如何控制投资中的贪婪和恐惧？
-4. 如果遇到黑天鹅事件，你如何应对？
-5. 如何建立自己的投资纪律？
+- 2000年互联网泡沫破裂
+
+**假设场景**：
+- 利率上升300bps
+- 通胀飙升至10%
+- 股市下跌40%
+
+**蒙特卡洛模拟**：
+基于统计分布，模拟大量可能的未来路径，计算组合收益分布：
+$$ \hat{R}_t = \sum_{i=1}^{N} w_i \hat{R}_{i,t} $$
+其中 $\hat{R}_{i,t}$ 为资产 i 在路径 t 上的模拟收益。
 
 ---
 
-下一篇：行业分析
+*参考资料：Markowitz (1952), Sharpe (1964), Kelly (1956), MacLean et al. (2011)*
+
+上一篇：估值方法理论与模型 | 下一篇：行业分析
