--- a/articles/20260206-投资学习07-交易心理学.md
+++ b/articles/20260206-投资学习07-交易心理学.md
@@ -1,633 +1,239 @@
-# 股票投资学习笔记 07：交易心理学
+# 股票投资学习笔记 07：行为金融与投资心理学
 
-## 投资心理的重要性
+## 行为金融学基础
 
-### 为什么心理学在投资中如此重要？
+### 有效市场假说 vs 行为偏差
 
-**核心原因**：
-1. 投资决策受情绪影响
-2. 情绪会偏离理性
-3. 多数亏损来自心理错误
+根据有效市场假说（EMH），市场中的投资者是理性的，价格完全反映所有可得信息，因此无法持续获得超额收益：
 
-**现实**：
-- 投资不纯粹是理性的
-- 情绪和认知偏差无处不在
-- 了解心理学有助于避免常见错误
+$$ E[R_{t+1} \mid I_t] = R_f $$
 
-**价值投资者**：
-- 承认情绪的存在
-- 建立系统对抗情绪
-- 用纪律约束行为
+然而，大量实证研究表明，投资者行为系统性偏离理性。行为金融学（Behavioral Finance）引入心理学因素，解释市场异常和投资者错误。
 
-## 认知偏差
+### 前景理论（Prospect Theory）
 
-### 1. 确认偏差（Confirmation Bias）
+Kahneman 和 Tversky (1979) 提出的前景理论修正了期望效用理论（Expected Utility Theory），认为个人在面对风险决策时，其效用函数不是线性的。
 
-**定义**：只关注支持自己观点的信息，忽略反对信息。
+**核心概念**：
 
-**表现**：
-- 买入后只看好消息
-- 忽略风险信号
+1. **参照点依赖（Reference Dependence）**：
+   效用取决于相对于参照点（Reference Point）的收益或损失，而非最终财富水平。
+   设 $x$ 为收益，$x < 0$ 为损失，则效用函数为 $v(x)$。
+
+2. **损失厌恶（Loss Aversion）**：
+   损失的痛苦大于等额收益的快乐：
+   $$ v(x) = \begin{cases} x^\alpha & \text{if } x \geq 0 \\ -\lambda(-x)^\beta & \text{if } x < 0 \end{cases} $$
+   其中 $\lambda > 1$ 为损失厌恶系数（通常 $\lambda \approx 2-2.5$），$\alpha, \beta \approx 0.88$。
+
+**投资含义**：
+- 投资者为了规避损失，即使期望收益为正，也可能拒绝风险资产。
+- 表现为：不愿止损（确认损失）、过度持有亏损头寸。
+- 过度频繁检视投资组合，因为对损失的关注高于对收益的关注。
+
+3. **概率加权（Probability Weighting）**：
+   个人对小概率过度加权（overweight），对大概率低估（underweight），使用权重函数 $\pi(p)$ 而非线性概率 $p$：
+   $$ \sum_{i} \pi(p_i) v(x_i) > \sum_{i} p_i v(x_i) $$
+
+## 认知偏差的系统分类
+
+### 1. 信息处理偏差（Information Processing Biases）
+
+#### 确认偏差（Confirmation Bias）
+
+**定义**：倾向于寻找和记忆支持自己已有信念的信息，忽略或贬低相矛盾的证据。
+
+**数学表达**：
+设投资者对资产 A 的初始信念为 $P(A)$。收到信号 $s$ 后的信念更新不遵循贝叶斯规则：
+$$ P(A|s) \propto P(s|A) P(A) $$
+而是：
+$$ P'(A|s) \propto P(s|A) P(A) \times \begin{cases} k > 1 & \text{if } s \text{ supports } A \\ k < 1 & \text{if } s \text{ contradicts } A \end{cases} $$
+
+**投资表现**：
+- 买入后只关注利好消息
+- 忽视风险预警
 - 过度自信
 
-**后果**：
-- 误判风险
-- 无法及时纠错
-- 亏损扩大
+#### 锚定效应（Anchoring）
 
-**如何应对**：
-- 主动寻找反对观点
-- 与持不同意见的人讨论
-- 定期问自己："我是不是太乐观了？"
+**定义**：在不确定环境下，过度依赖初始信息（锚点）进行后续判断。
 
-### 2. 锚定效应（Anchoring）
+**模型**：
+$$ \hat{V} = \alpha V_{anchor} + (1-\alpha) V_{information} $$
+其中 $\alpha$ 过度接近 1，即对锚点 $V_{anchor}$ 赋予过高权重。
 
-**定义**：过度依赖初始信息（如买入价）。
+**投资场景**：
+- 下跌中，过度依赖买入价，忽略当前价值变化。
+- 估值时，过度依赖历史 PE，忽略行业或宏观变化。
 
-**表现**：
-- 下跌中舍不得卖
-- 上涨中舍不得买（怕追高）
-- 被买入价束缚
+#### 近期偏差（Recency Bias）
 
-**后果**：
-- 错过卖出机会
-- 错过买入机会
-- 错误放大
+**定义**：过度关注近期信息，认为近期趋势将持续，忽略长期均值回归。
 
-**如何应对**：
-- 关注当前价值而非买入价
-- 问自己："今天我还会买吗？"
-- 如果不会，果断卖出
+**预测模型**：
+$$ \hat{R}_{t+1} = \sum_{i=0}^{n} w_i R_{t-i} $$
+其中 $w_i$ 过度集中于近期的 $i$（小 $i$ 的权重高），而非均匀分布。
 
-### 3. 损失厌恶（Loss Aversion）
+### 2. 决策偏差（Decision Biases）
 
-**定义**：对亏损的痛苦是对盈利的快乐。
+#### 损失厌恶（Loss Aversion，前景理论核心）
 
-**表现**：
-- 亏损50%比盈利50%更痛苦
-- 不愿止损，希望回本
-- 赚了一点就卖，亏了就死扛
+**投资行为**：
+- **处置效应（Disposition Effect）**：过早卖出盈利股（实现收益的快乐），延迟卖出亏损股（避免损失的痛苦）。
+  实证：Odean (1998) 发现投资者卖出盈利股的概率是亏损股的 1.5-2 倍。
+- **羊群效应（Herding）**：追随大众，缺乏独立思考。
 
-**后果**：
-- 小赚大亏
-- 错失机会成本
-- 心态失衡
+#### 沉没成本谬误（Sunk Cost Fallacy）
 
-**如何应对**：
-- 理解损失的数学：亏损50%需要上涨100%才能回本
-- 设定止损线并严格执行
-- 关注整体收益而非单笔盈亏
+**定义**：已发生且无法收回的成本（沉没成本）不应影响当前决策，但个人常错误考虑沉没成本。
 
-### 4. 过度自信（Overconfidence）
+**理性决策**：
+$$ \max_{a \in A} E[U(W_{future}) - C(a)] $$
+即只比较未来期望效用与行动成本，不考虑过去已发生成本。
 
-**定义**：高估自己的知识和能力。
+**非理性决策**：
+$$ \max_{a \in A} E[U(W_{future}) - C(a) \mid SunkCost] $$
+错误地将沉没成本纳入决策。
 
-**表现**：
-- 认为自己能预测市场
-- 认为研究的公司一定会涨
-- 忽略不确定性
+**投资场景**：
+- "我已经亏了 30%，不能现在卖，否则亏损变现。"
+- "我已经研究了 2 个月，一定是对的。"
 
-**后果**：
-- 孤注一掷
-- 不做风控
-- 遭受意外打击
+#### 过度自信（Overconfidence）
 
-**如何应对**：
-- 承认市场的不确定性
-- 问自己："我的预测可靠吗？"
-- 保持谦逊，持续学习
+**定义**：高估自己的知识、能力和预测的准确性。
 
-### 5. 羊群效应（Herding）
+**实证**：Barber & Odean (2001) 发现，交易最频繁的投资者（男性、高收入、过度自信）的平均收益最低。
 
-**定义**：追随大众，害怕与众不同。
+### 3. 社会偏差（Social Biases）
 
-**表现**：
-- 看到大家买就买
-- 看到大家卖就卖
-- 不敢逆向思考
+#### 羊群效应（Herding）
 
-**后果**：
-- 追涨杀跌
-- 高买低卖
-- 错失独立判断的机会
+**模型**：
+个体 $i$ 的决策受他人决策 $D_{-i}$ 的影响：
+$$ D_i = \beta_0 + \beta_1 \sum_{j \neq i} w_{ij} D_j + \epsilon_i $$
+其中 $\sum w_{ij} = 1$（归一化），$\beta_1$ 高表示强羊群效应。
 
-**如何应对**：
-- 独立思考
-- 不随大流
-- 勇于逆向：在恐慌时买入，在狂热时卖出
+#### 社会认同需求（Social Proof）
 
-### 6. 近期偏差（Recency Bias）
+**含义**：在不确定情况下，观察他人行为以获得"正确"行为的信息。
 
-**定义**：过度关注近期信息，忽略长期数据。
+## 情绪周期与市场情绪
 
-**表现**：
-- 只看近期K线
-- 认为近期趋势会持续
-- 忽略长期基本面
+### 贪婪与恐惧的量化
 
-**后果**：
-- 短视决策
-- 追逐热点
-- 错失长期机会
+市场情绪可建模为状态变量 $S_t \in \{Greed, Fear, Neutral\}$。
 
-**如何应对**：
-- 看长期数据（3-5年）
-- 关注基本面而非短期波动
-- 避免追逐短期热点
+**贪婪状态**：
+- 特征：追涨、拒绝止盈、高位接盘
+- 市场表现：高成交量、价格快速上涨、估值飙升
+- 指标：高位震荡但拒绝回调
 
-### 7. 沉没成本（Sunk Cost Fallacy）
+**恐惧状态**：
+- 特征：恐慌性抛售、过度悲观、低位割肉
+- 市场表现：放量下跌、价格快速下挫、波动率飙升
+- 指标：低位但成交量萎缩（无人接盘）
 
-**定义**：因为已经投入而继续错误决策。
+**逆向策略**：
+$$ Signal_t = - \text{Sentiment}_t $$
+即当市场情绪过度贪婪时考虑卖出，过度恐惧时考虑买入。
 
-**表现**：
-- "我已经亏了这么多，不能现在卖"
-- "我已经研究了这么多，一定是正确的"
-- 不愿承认错误
+### 心理账户（Mental Accounting）
 
-**后果**：
-- 亏损持续扩大
-- 错失转向机会
-- 情绪恶化
+Thaler (1985) 提出的心理账户理论：个人在心理上将资金分门别类，对每类账户应用不同的决策规则。
 
-**如何应对**：
-- 问自己："如果我现在没有持有，还会买吗？"
-- 如果不会，果断卖出
-- 忘记过去，关注未来
+**框架**：
+$$ Total Wealth = \sum_{k=1}^{K} Account_k $$
+决策时，不是基于总财富，而是基于特定账户 $Account_k$。
 
-### 8. 心理账户（Mental Accounting）
+**投资场景**：
+- "盈利账户"的钱可以冒险（因为这是"赚来的"）
+- "本金账户"的钱要保守（因为这是"血汗钱"）
+- "意外之财"可以挥霍（因为"不劳而获"）
 
-**定义**：把钱分成不同"账户"，区别对待。
+**后果**：导致次优决策，违反标准金融学的资金可替代性假设（Fungibility）。
 
-**表现**：
-- "盈利的钱"可以冒险
-- "本金的钱"要保值
-- "意外之财"可以挥霍
+## 基于行为金融学的投资策略
 
-**后果**：
-- 风险管理混乱
-- 不理性分配
-- 整体收益受损
+### 预承诺策略（Pre-commitment Strategy）
 
-**如何应对**：
-- 统一对待所有资金
-- 不区分来源
-- 整体风险评估收益
+针对损失厌恶和自控问题，预先承诺决策规则，减少情绪干扰。
 
-## 情绪控制
+**方法**：
+1. **止损承诺**：设定并承诺执行止损规则，无论当时的情绪如何。
+2. **投资政策声明（Investment Policy Statement, IPS）**：以书面形式声明投资目标、风险承受度、资产配置策略。
+3. **自动再平衡（Automatic Rebalancing）**：预设再平衡规则，避免主观选择时机。
 
-### 贪婪（Greed）
+### 逆向投资（Contrarian Investing）
 
-#### 表现
+利用羊群效应和市场情绪过度反应。
 
-**上涨时**：
-- 涨了舍不得卖
-- 想赚更多
-- 追逐更高收益
+**策略逻辑**：
+- 在市场恐慌时（$Sentiment \ll 0$）买入
+- 在市场狂热时（$Sentiment \gg 0$）卖出
 
-**下跌时**：
-- 看到别人赚钱就追
-- 不愿错过机会
-- 高位接盘
+**数学表达**：
+$$ w_{i,t+1} = w_{i,t} + \alpha \cdot (-\text{Sentiment}_t) \cdot \frac{1}{N} $$
+其中 $\alpha$ 为调整系数，$N$ 为资产数量。即情绪极度负面时增持，情绪极度正面时减仓。
 
-#### 危害
+### 心理止损与动态仓位
 
-- 变成"坐过山车"
-- 高位买入被套
-- 错过最佳卖点
+基于损失厌恶和心理承受度，动态调整仓位。
 
-#### 应对
+**模型**：
+设风险承受度函数 $U(\sigma)$，使得边际效用等于风险带来的边际痛苦：
+$$ \frac{\partial U}{\partial \text{Position}} = \lambda \cdot \frac{\partial \text{Pain}}{\partial \text{Position}} $$
 
-1. **设定止盈目标**
-   - 买入时就确定目标价
-   - 到达目标分批卖出
-   - 不要临时改变计划
+**应用**：
+- 随着盈利增加，降低仓位（锁定收益，降低回撤风险）
+- 随着亏损增加，降低仓位（控制痛苦，避免情绪失控）
+- 基于波动率（ATR）调整仓位（高波动时降低仓位）
 
-2. **克制追涨欲望**
-   - 不要买已经大涨的股票
-   - 等待合理估值
-   - 耐心等待机会
+## 认知偏差的应对工具
 
-3. **关注公司基本面**
-   - 不要被价格波动干扰
-   - 公司价值决定长期回报
-   - 不是短期价格变化
+### 投资记录与反思（Journaling）
 
-### 恐惧（Fear）
+**目的**：将决策过程显性化，减少心理账户偏差，便于事后复盘。
 
-#### 表现
+**记录模板**：
 
-**下跌时**：
-- 跌了不敢买
-- 持有的恐慌性卖出
-- 低位割肉
+| 维度 | 内容 |
+|------|------|
+| **决策背景** | 日期、市场环境、资金状态 |
+| **信息来源** | 研究报告、新闻、技术分析 |
+| **决策理由** | 基本面逻辑、估值方法、技术信号 |
+| **预期假设** | 增长率、盈利能力、催化剂事件 |
+| **情绪状态** | 恐惧、贪婪、冷静、过度自信 |
+| **结果追踪** | 实际盈亏、时间跨度 |
 
-**上涨时**：
-- 涨了一点就卖
-- 怕利润回吐
-- 错过大行情
+### 清单式决策（Checklist-based Decision Making）
 
-#### 危害
+针对确认偏差和过度自信，强制检查清单，在行动前确认关键因素。
 
-- 错过底部机会
-- 低位卖掉好股票
-- 无法享受复利
+**买入前清单**：
+- [ ] 公司基本面优秀（ROE、现金流）
+- [ ] 估值在合理区间（PE、PB 历史分位）
+- [ ] 行业前景良好（生命周期、五力分析）
+- [ ] 风险可控（分散化、仓位控制）
+- [ ] 非情绪驱动（非追涨、非听消息）
 
-#### 应对
+### 定量风险评估
 
-1. **关注公司基本面**
-   - 下跌时问：公司变坏了吗？
-   - 如果没有，可能是市场情绪
-   - 优质公司下跌是机会
+针对损失厌恶，将风险转化为明确的"痛苦"概率，辅助理性决策。
 
-2. **长期视角**
-   - 市场短期是投票机
-   - 市场长期是称重机
-   - 短期波动不必太在意
+**VaR（Value at Risk）**：
+在置信水平 $\alpha$ 下，投资组合的最大可能损失：
+$$ \text{VaR}_\alpha = \inf \{ l \in \mathbb{R} : P(L > l) \leq 1-\alpha \} $$
 
-3. **逆向思维**
-   - 在恐慌时考虑买入
-   - 在狂热时考虑卖出
-   - 他人恐惧时贪婪，他人贪婪时恐惧
+**CVaR（Conditional VaR）**：
+超过 VaR 时的平均损失（尾部风险）：
+$$ \text{CVaR}_\alpha = E[L \mid L \geq \text{VaR}_\alpha] $$
 
-### 后悔（Regret）
-
-#### 表现
-
-- 卖早了后悔
-- 买晚了后悔
-- 错过热点后悔
-- 买错了后悔
-
-#### 危害
-
-- 影响心态
-- 做出错误决策
-- 信心受打击
-
-#### 应对
-
-1. **接受不完美**
-   - 无人能完美把握所有机会
-   - 错失是投资的一部分
-   - 不要纠结于过去
-
-2. **关注未来**
-   - 过去无法改变
-   - 未来有很多机会
-   - 从错误中学习
-
-3. **总结经验**
-   - 分析为什么后悔
-   - 如何避免下次后悔
-   - 建立更好的系统
-
-## 建立投资纪律
-
-### 纪律的重要性
-
-**为什么需要纪律？**
-- 抵御情绪干扰
-- 确保长期一致性
-- 避免冲动决策
-
-**纪律的特征**：
-- 写下来
-- 具体可执行
-- 严格执行
-
-### 纪律框架
-
-#### 1. 买入纪律
-
-**规则示例**：
-- 只投资自己理解的公司
-- 估值在合理区间才买入
-- 单只股票不超过30%
-- 不追涨停板
-- 不听小道消息
-
-**执行**：
-- 买入前检查清单
-- 符合所有条件才买
-- 不符合就等待
-
-#### 2. 持有纪律
-
-**规则示例**：
-- 定期跟踪公司公告
-- 季报/年报后重新评估
-- 关注行业动态
-- 每月复盘投资组合
-
-**执行**：
-- 设定检查时间（如每月1日）
-- 记录检查结果
-- 根据结果调整
-
-#### 3. 卖出纪律
-
-**止损纪律**：
-- 明确止损条件（基本面或技术面）
-- 到达条件立即执行
-- 不犹豫不决
-
-**止盈纪律**：
-- 明确止盈条件（估值或基本面）
-- 分批止盈
-- 保留部分继续持有
-
-#### 4. 资金管理纪律
-
-**规则示例**：
-- 总是保留10-20%现金
-- 不要all in
-- 分散投资5-10只股票
-- 单只股票不超过30%
-
-**执行**：
-- 每次买卖后检查仓位
-- 定期再平衡
-- 严格遵守比例
-
-### 纪律执行
-
-#### 如何确保执行？
-
-1. **写下来**
-   - 把所有纪律写下来
-   - 放在显眼的地方
-   - 经常查看
-
-2. **自动化**
-   - 设定自动止损（如果有条件）
-   - 设定自动止盈（如果有条件）
-   - 减少人为干预
-
-3. **问责机制**
-   - 告诉别人你的纪律
-   - 让他们监督你
-   - 或者记录自己的执行情况
-
-4. **反思和调整**
-   - 定期回顾执行情况
-   - 分析为什么执行或没执行
-   - 调整不合理的纪律
-
-## 记录和复盘
-
-### 投资记录
-
-#### 记录什么？
-
-**基本信息**：
-- 买入日期、价格、数量
-- 卖出日期、价格、数量
-- 盈亏情况
-
-**买入理由**：
-- 为什么买这只股票
-- 基本面分析要点
-- 估值判断
-- 风险评估
-
-**卖出理由**：
-- 为什么卖出这只股票
-- 是止损还是止盈
-- 是否符合原计划
-
-**心理状态**：
-- 买入时的情绪（贪婪/恐惧/冷静）
-- 卖出时的情绪
-- 持有过程中的心态变化
-
-#### 记录方法
-
-**工具**：
-- Excel表格
-- 投资软件
-- 手写笔记
-
-**模板**：
-
-| 股票代码 | 买入日期 | 买入价 | 数量 | 买入理由 | 卖出日期 | 卖出价 | 盈亏 | 卖出理由 | 心理状态 |
-|---------|---------|-------|------|---------|---------|-------|------|---------|---------|
-| 000001 | 2026-01-15 | 10.5 | 1000 | 消费龙头，PE=20 | - | - | - | - | 冷静 |
-
-### 投资复盘
-
-#### 复盘频率
-
-- **每日**：记录当天的买卖决策
-- **每周**：总结一周的决策，分析对错
-- **每月**：总结整月表现，分析模式
-- **每年**：总结全年表现，规划来年
-
-#### 复盘内容
-
-**1. 决策分析**
-
-- 哪些决策是正确的？为什么？
-- 哪些决策是错误的？为什么？
-- 受到哪些情绪或偏差影响？
-
-**2. 盈亏分析**
-
-- 盈利股票的共同特征
-- 亏损股票的共同特征
-- 哪些纪律被遵守，哪些被违反
-
-**3. 心态分析**
-
-- 成功交易时的心态
-- 失败交易时的心态
-- 情绪如何影响决策
-
-**4. 改进方向**
-
-- 发现的问题
-- 改进措施
-- 新的纪律或规则
-
-#### 复盘示例
-
-**日期**：2026-01-31
-
-**本月交易**：
-- 买入3只，卖出2只
-- 整体盈利+5%
-
-**成功交易**：
-- 按纪律操作
-- 在合理估值买入
-- 有明确的买入理由
-
-**失败交易**：
-- 追涨买入
-- 没有止损
-- 受情绪影响
-
-**发现的问题**：
-- 有时追涨
-- 止损执行不够坚决
-- 对热点股票研究不够深入
-
-**改进措施**：
-- 加强止损纪律
-- 不追涨停板
-- 对热点股票谨慎研究
-
-## 实务建议
-
-### 1. 认识自己
-
-**了解自己的性格**：
-- 你是保守还是激进？
-- 容易贪婪还是恐惧？
-- 能够承受多大亏损？
-
-**根据性格调整策略**：
-- 保守者：更分散，更多防守
-- 激进者：控制仓位，严格止损
-- 容易恐惧：做好研究，不要被短期波动吓到
-- 容易贪婪：设定止盈，不要贪心
-
-### 2. 建立系统
-
-**系统的好处**：
-- 减少情绪决策
-- 提供一致性行为
-- 便于复盘和改进
-
-**系统包括**：
-- 选股标准
-- 买入时机
-- 仓位管理
-- 止损止盈规则
-
-### 3. 持续学习
-
-**学习渠道**：
-- 阅读投资书籍
-- 学习大师经验
-- 关注优质投资内容
-- 不断反思和总结
-
-**学习重点**：
-- 认知心理学
-- 投资纪律
-- 市场历史
-- 自己的错误
-
-### 4. 保持耐心
-
-**耐心的重要性**：
-- 好的投资需要时间体现
-- 不要急于求成
-- 给公司和市场时间
-
-**如何培养耐心**：
-- 长期持有优质公司
-- 不频繁交易
-- 只把握确定性高的机会
-
-## 常见错误及应对
-
-### 错误1：追涨杀跌
-
-**表现**：
-- 涨了就追
-- 跌了就卖
-
-**后果**：
-- 高买低卖
-- 错失真正的机会
-- 错失独立的判断的机会
-
-**应对**：
-- 逆向思维：下跌时考虑买入
-- 不追涨停板
-- 等待合理估值
-
-### 错误2：不止损
-
-**表现**：
-- 亏损了就死扛
-- 希望等回本
-
-**后果**：
-- 小亏变大亏
-- 错失机会成本
-- 心态恶化
-
-**应对**：
-- 设定止损线
-- 严格执行止损
-- 承认错误，及时纠错
-
-### 错误3：过早止盈
-
-**表现**：
-- 涨了一点就卖
-- 怕利润回吐
-
-**后果**：
-- 错过大行情
-- 无法享受复利
-
-**应对**：
-- 分批止盈
-- 给股票时间
-- 关注基本面而非短期价格
-
-### 错误4：过度交易
-
-**表现**：
-- 频繁买卖
-- 追逐每一个机会
-
-**后果**：
-- 交易成本高
-- 累积小亏
-- 手续费增加
-
-**应对**：
-- 减少交易频率
-- 长期持有
-- 只把握确定性高的机会
-
-### 错误5：听信小道消息
-
-**表现**：
-- 听到消息就买
-- 不做独立研究
-- 盲目跟风
-
-**后果**：
-- 被人利用
-- 买入风险高的股票
-- 不了解就买入
-
-**应对**：
-- 不听小道消息
-- 只做独立研究
-- 依赖公开信息和数据
-
-## 本节要点总结
-
-1. **心理重要性**：投资决策受情绪和认知偏差影响，了解心理学有助于避免错误
-2. **认知偏差**：确认偏差、锚定效应、损失厌恶、过度自信、羊群效应、近期偏差、沉没成本、心理账户
-3. **情绪控制**：贪婪和恐惧是最大的敌人，需要建立纪律对抗
-4. **纪律建立**：买入、持有、卖出、资金管理都要有明确纪律
-5. **记录复盘**：记录投资决策和心理状态，定期复盘，总结经验教训
-
-## 思考题
-
-1. 你最容易犯哪种认知偏差？如何克服？
-2. 你的投资风格是怎样的？保守还是激进？
-3. 你有明确的投资纪律吗？执行得如何？
-4. 你如何控制投资中的贪婪和恐惧？
-5. 你如何从错误中学习？
+**应用**：
+- 理解在 95% 置信水平下，最差情况下会亏损多少
+- 如果该损失超出心理承受度，则降低仓位或拒绝投资
 
 ---
 
-下一篇：A股实战
+*参考资料：Kahneman & Tversky (1979), Thaler (1980), Barber & Odean (2001), Shleifer (2000), Statman (1999)*
+
+上一篇：技术分析基础理论与指标 | 下一篇：A股实战
